--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,8 @@
-*.py[cod]
+# arquivos compilados python
+*.pyc
+
+# arquivos temporarios gedit
 *~
 
-# C extensions
-*.so
-
-# Packages
-*.egg
-*.egg-info
-dist
+# arquivos temporarios do PIP
 build
-eggs
-parts
-bin
-var
-sdist
-develop-eggs
-.installed.cfg
-lib
-lib64
-
-# Installer logs
-pip-log.txt
-
-# Unit test / coverage reports
-.coverage
-.tox
-nosetests.xml
-
-# Translations
-*.mo
-
-# Mr Developer
-.mr.developer.cfg
-.project
-.pydevproject
